--- a/index.html
+++ b/index.html
@@ -470,8 +470,10 @@
 
     // === Загрузка данных из Firebase ===
     function loadData() {
+      console.log('loadData called. isAdmin:', isAdmin); // DEBUG
       // Загрузка бронирований клиентов
       onSnapshot(collection(db, "bookings"), (snapshot) => {
+        console.log('Bookings snapshot received:', snapshot.docs.length); // DEBUG
         bookings = snapshot.docs.map(doc => ({
           id: doc.id,
           ...doc.data()
@@ -483,26 +485,36 @@
 
       // Загрузка администраторов (только для админа)
       if (isAdmin) {
+          console.log('Attempting to load admins...'); // DEBUG
           onSnapshot(collection(db, "admins"), (snapshot) => {
+            console.log('Admins snapshot received:', snapshot.docs.length); // DEBUG
             admins = snapshot.docs.map(doc => ({
               id: doc.id,
               ...doc.data()
             })).sort((a, b) => a.name.localeCompare(b.name)); // Сортировка по имени
+             console.log('Admins loaded:', admins); // DEBUG
             updateAdminSelects(); // Обновляем списки в модалке
             renderAdminsCalendar(); // Обновляем календарь админов
-            if (isAdmin) calculateSalaries(); // Пересчитываем ЗП
+            calculateSalaries(); // Пересчитываем ЗП // Убрал if(isAdmin), т.к. мы уже внутри этого условия
+          }, (error) => { // Добавил обработчик ошибок
+            console.error("Error loading admins:", error); // DEBUG
           });
 
           // Загрузка назначений администраторов (только для админа)
+          console.log('Attempting to load adminAssignments...'); // DEBUG
           onSnapshot(collection(db, "adminAssignments"), (snapshot) => {
+            console.log('AdminAssignments snapshot received:', snapshot.docs.length); // DEBUG
             adminAssignments = snapshot.docs.map(doc => ({
               id: doc.id, // Используем дату как ID
               ...doc.data()
             }));
             renderAdminsCalendar(); // Обновляем календарь админов
-            if (isAdmin) calculateSalaries(); // Пересчитываем ЗП
+             calculateSalaries(); // Пересчитываем ЗП // Убрал if(isAdmin)
+          }, (error) => { // Добавил обработчик ошибок
+             console.error("Error loading adminAssignments:", error); // DEBUG
           });
       } else {
+          console.log('Not loading admin data because isAdmin is false.'); // DEBUG
           // Если не админ, очищаем данные админов
           admins = [];
           adminAssignments = [];
@@ -619,6 +631,7 @@
 
     // === Логика Списка Записей Клиентов ===
     function renderBookingsList() {
+        console.log('renderBookingsList called for month:', bookingsViewMonth.toLocaleDateString()); // DEBUG
         bookingsListEl.innerHTML = '';
         const year = bookingsViewMonth.getFullYear();
         const month = bookingsViewMonth.getMonth();
@@ -627,17 +640,26 @@
         bookingsListTitle.textContent = `Список записей на ${bookingsViewMonth.toLocaleDateString('ru-RU', { month: 'long', year: 'numeric' })}`;
 
         let filteredBookings = bookings.filter((b) => {
-            const bDate = new Date(b.bookingDate);
-            // Убедимся, что сравниваем только год и месяц
-            return bDate.getFullYear() === year && bDate.getMonth() === month;
+             try { // Добавим try-catch на случай невалидных дат
+                const bDate = new Date(b.bookingDate);
+                // Убедимся, что сравниваем только год и месяц
+                return bDate.getFullYear() === year && bDate.getMonth() === month;
+             } catch (e) {
+                 console.warn("Error parsing booking date in filter:", b.bookingDate, e);
+                 return false;
+             }
         });
+        console.log('Filtered bookings for list:', filteredBookings.length, filteredBookings); // DEBUG
 
         if (filteredBookings.length === 0) {
+            console.log('No bookings for list, showing placeholder.'); // DEBUG
             noBookingsText.classList.remove('hidden');
             bookingsListEl.classList.add('hidden'); // Скрываем сам список
             return;
         } else {
+             console.log('Found bookings, hiding placeholder.'); // DEBUG
             noBookingsText.classList.add('hidden');
+            bookingsListEl.classList.remove('hidden'); // Показываем список
         }
 
         // Сортировка по дате и времени
@@ -974,23 +996,24 @@
 
     // === Логика Модального Окна Назначения Админа ===
     function updateAdminSelects() {
-        const mainAdminValue = mainAdminSelect.value; // Сохраняем текущее значение основного админа
-        const helperAdminValue = helperAdminSelect.value; // Сохраняем текущее значение помощника
+        console.log('updateAdminSelects called. Admins available:', admins.length, admins); // DEBUG
+        const mainAdminValue = mainAdminSelect.value;
+        const helperAdminValue = helperAdminSelect.value;
 
-        // Очищаем и добавляем опцию по умолчанию
         mainAdminSelect.innerHTML = '<option value="">-- Не назначен --</option>';
         helperAdminSelect.innerHTML = '<option value="">-- Нет помощника --</option>';
 
-        // Добавляем администраторов в оба списка
         admins.forEach(admin => {
             const optionMain = document.createElement('option');
             optionMain.value = admin.id;
             optionMain.textContent = admin.name;
+             console.log('Adding main option:', admin.name, admin.id); // DEBUG
             mainAdminSelect.appendChild(optionMain);
 
             const optionHelper = document.createElement('option');
             optionHelper.value = admin.id;
             optionHelper.textContent = admin.name;
+            console.log('Adding helper option:', admin.name, admin.id); // DEBUG
             helperAdminSelect.appendChild(optionHelper);
         });
 
@@ -1424,9 +1447,11 @@
     }
 
     onAuthStateChanged(auth, (user) => {
+      console.log('Auth state changed. User:', user); // DEBUG
       if (user) {
         // Пользователь вошел
         isAdmin = true;
+        console.log('isAdmin set to true'); // DEBUG
         logoutBtn.classList.remove('hidden');
         loginBtn.classList.add('hidden');
         addBookingBtn.classList.remove('hidden'); // Показать кнопку добавления записи
@@ -1436,6 +1461,7 @@
       } else {
         // Пользователь вышел
         isAdmin = false;
+        console.log('isAdmin set to false'); // DEBUG
         logoutBtn.classList.add('hidden');
         loginBtn.classList.remove('hidden');
         addBookingBtn.classList.add('hidden'); // Скрыть кнопку добавления записи
@@ -1491,12 +1517,16 @@
 
       // --- Список записей клиентов ---
       prevMonthBookingsBtn.addEventListener('click', () => {
+        console.log('Prev month bookings clicked. Old month:', bookingsViewMonth.toLocaleDateString()); // DEBUG
         bookingsViewMonth.setMonth(bookingsViewMonth.getMonth() - 1);
-        renderBookingsList();
+         console.log('New month:', bookingsViewMonth.toLocaleDateString()); // DEBUG
+        renderBookingsList(); // Убедимся, что вызывается
       });
       nextMonthBookingsBtn.addEventListener('click', () => {
+         console.log('Next month bookings clicked. Old month:', bookingsViewMonth.toLocaleDateString()); // DEBUG
         bookingsViewMonth.setMonth(bookingsViewMonth.getMonth() + 1);
-        renderBookingsList();
+        console.log('New month:', bookingsViewMonth.toLocaleDateString()); // DEBUG
+        renderBookingsList(); // Убедимся, что вызывается
       });
 
       // --- Модальное окно бронирования клиента ---
