--- a/index.html
+++ b/index.html
@@ -174,6 +174,19 @@
             <i class="fas fa-chevron-right text-lg"></i>
           </button>
         </div>
+
+        <!-- ИНФОРМАЦИОННЫЙ БЛОК -->
+        <div class="mb-8 p-6 bg-blue-50 border border-blue-200 rounded-2xl text-sm text-blue-800">
+          <h4 class="font-semibold text-base mb-3 text-blue-900">Условия начисления зарплаты:</h4>
+          <ul class="list-disc list-inside space-y-1.5">
+            <li>Фиксированная ставка <strong>500₽</strong> за смену для основного администратора.</li>
+            <li>Бонус <strong>15%</strong> от выручки за смену (или <strong>8%</strong>, если на смене был помощник).</li>
+            <li>Помощнику начисляется <strong>150₽/час</strong> + бонус <strong>7%</strong> от выручки за смену.</li>
+            <li>Расчет и выдача зарплаты производятся по понедельникам.</li>
+          </ul>
+        </div>
+        <!-- КОНЕЦ ИНФОРМАЦИОННОГО БЛОКА -->
+
         <div id="salaryResults" class="space-y-6">
           <!-- Результаты расчета зарплаты будут добавлены сюда -->
         </div>
@@ -632,24 +645,24 @@
     // === Логика Списка Записей Клиентов ===
     function renderBookingsList() {
         console.log('renderBookingsList called for month:', bookingsViewMonth.toLocaleDateString()); // DEBUG
-        bookingsListEl.innerHTML = '';
-        const year = bookingsViewMonth.getFullYear();
-        const month = bookingsViewMonth.getMonth();
+      bookingsListEl.innerHTML = '';
+      const year = bookingsViewMonth.getFullYear();
+      const month = bookingsViewMonth.getMonth(); // 0-indexed (0 = January, 11 = December)
+      // Формируем строку 'YYYY-MM' для сравнения
+      const yearMonthStr = `${year}-${(month + 1).toString().padStart(2, '0')}`;
+      console.log('Filtering bookings for year-month:', yearMonthStr); // DEBUG
 
-        // Обновляем заголовок
-        bookingsListTitle.textContent = `Список записей на ${bookingsViewMonth.toLocaleDateString('ru-RU', { month: 'long', year: 'numeric' })}`;
 
-        let filteredBookings = bookings.filter((b) => {
-             try { // Добавим try-catch на случай невалидных дат
-                const bDate = new Date(b.bookingDate);
-                // Убедимся, что сравниваем только год и месяц
-                return bDate.getFullYear() === year && bDate.getMonth() === month;
-             } catch (e) {
-                 console.warn("Error parsing booking date in filter:", b.bookingDate, e);
-                 return false;
-             }
-        });
-        console.log('Filtered bookings for list:', filteredBookings.length, filteredBookings); // DEBUG
+      // Обновляем заголовок
+      bookingsListTitle.textContent = `Список записей на ${bookingsViewMonth.toLocaleDateString('ru-RU', { month: 'long', year: 'numeric' })}`;
+
+      // Фильтруем, сравнивая начало строки 'YYYY-MM-DD' с 'YYYY-MM'
+      let filteredBookings = bookings.filter((b) => {
+            // Убедимся, что b.bookingDate - это строка и имеет нужный формат
+            return typeof b.bookingDate === 'string' && b.bookingDate.startsWith(yearMonthStr);
+      });
+
+      console.log('Filtered bookings for list:', filteredBookings.length, filteredBookings); // DEBUG
 
         if (filteredBookings.length === 0) {
             console.log('No bookings for list, showing placeholder.'); // DEBUG
